--- a/package.json
+++ b/package.json
@@ -6,26 +6,37 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.1.2",
     "@heroicons/react": "^2.2.0",
-    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.10",
     "@vercel/postgres": "^0.10.0",
+    "ai": "^4.1.2",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.473.0",
     "next": "latest",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.4.16",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "cookie@<0.7.0": ">=0.7.0"
+    }
   }
 }
