--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.1.2",
+    "@ai-sdk/anthropic": "^1.1.5",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@tailwindcss/forms": "^0.5.10",
     "@vercel/postgres": "^0.10.0",
-    "ai": "^4.1.2",
+    "ai": "^4.1.9",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -32,7 +33,10 @@
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0"
+    "@types/react-dom": "19.0.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "prettier": "^3.4.2"
   },
   "pnpm": {
     "overrides": {
